--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -13,13 +13,13 @@
         <div>
 
             <label for="title">Title: </label>
-            <input type="text" id="title" name="title" value="<%= campground.title %>">
+            <input type="text" id="title" name="campground[title]" value="<%= campground.title %>">
         </div>
         <br>
         <div>
 
             <label for="location">Location: </label>
-            <input type="text" id="location" name="location" value="<%= campground.location %>">
+            <input type="text" id="location" name="campground[location]" value="<%= campground.location %>">
         </div>
         <br>
         <button type="submit">SUBMIT</button>
