--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -13,13 +13,13 @@
         <div>
 
             <label for="title">Title: </label>
-            <input type="text" id="title" name="title">
+            <input type="text" id="title" name="campground[title]">
         </div>
         <br>
         <div>
 
             <label for="location">Location: </label>
-            <input type="text" id="location" name="location">
+            <input type="text" id="location" name="campground[location]">
         </div>
         <br>
         <button type="submit">Submit</button>
