--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Campground</title>
-</head>
-
-<body>
+<% layout('layouts/boilerplate') %>
     <h1>New Campground</h1>
     <form action="/campgrounds/new" method="POST">
         <div>
@@ -25,6 +16,3 @@
         <button type="submit">Submit</button>
     </form>
     <a href="/campgrounds">Back</a>
-</body>
-
-</html>
