--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
-
-<body>
-    <h1>YelpCamp - Home</h1>
+<%- layout('layouts/boilerplate.ejs') %>
+    <h1>Home</h1>
     <ul>
         <li><a href="/campgrounds">Campgrounds</a></li>
     </ul>
-</body>
-
-</html>
