--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -5,6 +5,10 @@
     <h2>
         <%= campground.location %>
     </h2>
+    <img src="<%= campground.image %>" width="400" alt="">
+    <p>
+        <%= campground.description %>
+    </p>
     <a href="/campgrounds/<%= campground._id %>/edit">EDIT</a><br><br>
     <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST"><button type="submit">DELETE</button>
     </form>
