--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,18 +1,44 @@
 <% layout('layouts/boilerplate') %>
-    <h1>Edit Campground</h1>
-    <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
-        <div>
+    <div class="row">
+        <h1 class="text-center my-4">Edit Campground</h1>
+        <div class="col-6 offset-3">
 
-            <label for="title">Title: </label>
-            <input type="text" id="title" name="campground[title]" value="<%= campground.title %>">
-        </div>
-        <br>
-        <div>
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title: </label>
+                    <input class="form-control" type="text" id="title" name="campground[title]"
+                        value="<%= campground.title %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location: </label>
+                    <input class="form-control" type="text" id="location" name="campground[location]"
+                        value="<%= campground.location%>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image URL: </label>
+                    <input class="form-control" type="text" id="image" name="campground[image]"
+                        value="<%= campground.image %>">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="price">Campground Price: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">$</span>
+                        </div>
+                        <input type="text" id="price" class="form-control" aria-label="Amount (to the nearest dollar)"
+                            name="campground[price]" value="<%= campground.price %>">
+                    </div>
+                </div>
 
-            <label for="location">Location: </label>
-            <input type="text" id="location" name="campground[location]" value="<%= campground.location %>">
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description: </label>
+                    <textarea class="form-control" type="text" id="description"
+                        name="campground[description]"><%= campground.description %> </textarea>
+                </div>
+                <div class="mb-2">
+                    <button class="btn btn-info" type="submit">Update Campground</button>
+                </div>
+            </form>
+            <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
         </div>
-        <br>
-        <button type="submit">SUBMIT</button>
-    </form>
-    <a href="/campgrounds">BACK</a>
+    </div>
