--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,29 @@
 <% layout('layouts/boilerplate') %>
-    <h1>All Campgrounds</h1>
-    <p><a href="/campgrounds/new">NEW CAMPGROUND</a></p>
-    <ul>
-        <% for (let campground of campgrounds) { %>
-            <li>
-                <%= campground.title %>
-                    <a href="/campgrounds/<%= campground._id %>">[details]</a>
-                    <a href="/campgrounds/<%= campground._id %>/edit">[edit]</a>
-            </li>
-            <% } %>
-    </ul>
+    <h1 class="text-center my-4">All Campgrounds</h1>
+    <% for (let campground of campgrounds) { %>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="img-fluid" src="<%= campground.image %>" alt="">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <%= campground.title %>
+                        </h5>
+                        <p class="card-text">
+                            <%= campground.description %>
+                        </p>
+                        <p class="card-text">
+                            <small class="text-secondary">
+                                <%= campground.location %>
+                            </small>
+                        </p>
+                        <a class="btn btn-primary" href="/campgrounds/<%= campground._id %>">View <%= campground.title
+                                %></a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <% } %>
