--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,18 +1,43 @@
 <% layout('layouts/boilerplate') %>
-    <h1>New Campground</h1>
-    <form action="/campgrounds/new" method="POST">
-        <div>
+    <div class="row">
 
-            <label for="title">Title: </label>
-            <input type="text" id="title" name="campground[title]">
-        </div>
-        <br>
-        <div>
+        <h1 class="text-center my-4">New Campground</h1>
+        <div class="col-6 offset-3">
 
-            <label for="location">Location: </label>
-            <input type="text" id="location" name="campground[location]">
+            <form action="/campgrounds/new" method="POST">
+                <div class="mb-3">
+                    <label class="form-label" for="title">Title: </label>
+                    <input class="form-control" type="text" id="title" name="campground[title]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="location">Location: </label>
+                    <input class="form-control" type="text" id="location" name="campground[location]">
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="image">Image URL: </label>
+                    <input class="form-control" type="text" id="image" name="campground[image]">
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label" for="price">Campground Price: </label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">$</span>
+                        </div>
+                        <input type="text" id="price" class="form-control" aria-label="Amount (to the nearest dollar)"
+                            placeholder="0.00" name="campground[price]">
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label class="form-label" for="description">Description: </label>
+                    <textarea class="form-control" type="text" id="description"
+                        name="campground[description]"> </textarea>
+                </div>
+                <div class="mb-2">
+                    <button class="btn btn-success" type="submit">Submit</button>
+                </div>
+            </form>
+            <a href="/campgrounds">Back</a>
         </div>
-        <br>
-        <button type="submit">Submit</button>
-    </form>
-    <a href="/campgrounds">Back</a>
+    </div>
