--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -3,21 +3,22 @@
         <h1 class="text-center my-4">Edit Campground</h1>
         <div class="col-6 offset-3">
 
-            <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
+            <form action="/campgrounds/<%= campground._id %>?_method=PUT" class="validated-form" method="POST"
+                novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title: </label>
                     <input class="form-control" type="text" id="title" name="campground[title]"
-                        value="<%= campground.title %>">
+                        value="<%= campground.title %>" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location: </label>
                     <input class="form-control" type="text" id="location" name="campground[location]"
-                        value="<%= campground.location%>">
+                        value="<%= campground.location%>" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL: </label>
                     <input class="form-control" type="text" id="image" name="campground[image]"
-                        value="<%= campground.image %>">
+                        value="<%= campground.image %>" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="price">Campground Price: </label>
@@ -26,14 +27,14 @@
                             <span class="input-group-text">$</span>
                         </div>
                         <input type="text" id="price" class="form-control" aria-label="Amount (to the nearest dollar)"
-                            name="campground[price]" value="<%= campground.price %>">
+                            name="campground[price]" value="<%= campground.price %>" required>
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="description">Description: </label>
-                    <textarea class="form-control" type="text" id="description"
-                        name="campground[description]"><%= campground.description %> </textarea>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]"
+                        required><%= campground.description %> </textarea>
                 </div>
                 <div class="mb-2">
                     <button class="btn btn-info" type="submit">Update Campground</button>
@@ -42,3 +43,25 @@
             <a href="/campgrounds/<%= campground._id %>">Back to Campground</a>
         </div>
     </div>
+
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (() => {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            const forms = document.querySelectorAll('.validated-form')
+
+            // Loop over them and prevent submission
+            Array.from(forms).forEach(form => {
+                form.addEventListener('submit', event => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        })()
+    </script>
