--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,18 +4,18 @@
         <h1 class="text-center my-4">New Campground</h1>
         <div class="col-6 offset-3">
 
-            <form action="/campgrounds/new" method="POST">
+            <form action="/campgrounds/new" method="POST" class="validated-form" novalidate>
                 <div class="mb-3">
                     <label class="form-label" for="title">Title: </label>
-                    <input class="form-control" type="text" id="title" name="campground[title]">
+                    <input class="form-control" type="text" id="title" name="campground[title]" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="location">Location: </label>
-                    <input class="form-control" type="text" id="location" name="campground[location]">
+                    <input class="form-control" type="text" id="location" name="campground[location]" required>
                 </div>
                 <div class="mb-3">
                     <label class="form-label" for="image">Image URL: </label>
-                    <input class="form-control" type="text" id="image" name="campground[image]">
+                    <input class="form-control" type="text" id="image" name="campground[image]" required>
                 </div>
 
                 <div class="mb-3">
@@ -25,14 +25,14 @@
                             <span class="input-group-text">$</span>
                         </div>
                         <input type="text" id="price" class="form-control" aria-label="Amount (to the nearest dollar)"
-                            placeholder="0.00" name="campground[price]">
+                            placeholder="0.00" name="campground[price]" required>
                     </div>
                 </div>
 
                 <div class="mb-3">
                     <label class="form-label" for="description">Description: </label>
-                    <textarea class="form-control" type="text" id="description"
-                        name="campground[description]"> </textarea>
+                    <textarea class="form-control" type="text" id="description" name="campground[description]"
+                        required> </textarea>
                 </div>
                 <div class="mb-2">
                     <button class="btn btn-success" type="submit">Submit</button>
@@ -41,3 +41,25 @@
             <a href="/campgrounds">Back</a>
         </div>
     </div>
+
+    <script>
+        // Example starter JavaScript for disabling form submissions if there are invalid fields
+        (() => {
+            'use strict'
+
+            // Fetch all the forms we want to apply custom Bootstrap validation styles to
+            const forms = document.querySelectorAll('.validated-form')
+
+            // Loop over them and prevent submission
+            Array.from(forms).forEach(form => {
+                form.addEventListener('submit', event => {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        })()
+    </script>
