--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,65 +1,39 @@
 <% layout('layouts/boilerplate') %>
-    <div class="row">
+<div class="row">
+	<h1 class="text-center my-4">New Campground</h1>
+	<div class="col-6 offset-3">
+		<form action="/campgrounds/new" method="POST" class="validated-form" novalidate>
+			<div class="mb-3">
+				<label class="form-label" for="title">Title: </label>
+				<input class="form-control" type="text" id="title" name="campground[title]" required />
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="location">Location: </label>
+				<input class="form-control" type="text" id="location" name="campground[location]" required />
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="image">Image URL: </label>
+				<input class="form-control" type="text" id="image" name="campground[image]" required />
+			</div>
 
-        <h1 class="text-center my-4">New Campground</h1>
-        <div class="col-6 offset-3">
+			<div class="mb-3">
+				<label class="form-label" for="price">Campground Price: </label>
+				<div class="input-group">
+					<div class="input-group-prepend">
+						<span class="input-group-text">$</span>
+					</div>
+					<input type="text" id="price" class="form-control" aria-label="Amount (to the nearest dollar)" placeholder="0.00" name="campground[price]" required />
+				</div>
+			</div>
 
-            <form action="/campgrounds/new" method="POST" class="validated-form" novalidate>
-                <div class="mb-3">
-                    <label class="form-label" for="title">Title: </label>
-                    <input class="form-control" type="text" id="title" name="campground[title]" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="location">Location: </label>
-                    <input class="form-control" type="text" id="location" name="campground[location]" required>
-                </div>
-                <div class="mb-3">
-                    <label class="form-label" for="image">Image URL: </label>
-                    <input class="form-control" type="text" id="image" name="campground[image]" required>
-                </div>
-
-                <div class="mb-3">
-                    <label class="form-label" for="price">Campground Price: </label>
-                    <div class="input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">$</span>
-                        </div>
-                        <input type="text" id="price" class="form-control" aria-label="Amount (to the nearest dollar)"
-                            placeholder="0.00" name="campground[price]" required>
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label class="form-label" for="description">Description: </label>
-                    <textarea class="form-control" type="text" id="description" name="campground[description]"
-                        required> </textarea>
-                </div>
-                <div class="mb-2">
-                    <button class="btn btn-success" type="submit">Submit</button>
-                </div>
-            </form>
-            <a href="/campgrounds">Back</a>
-        </div>
-    </div>
-
-    <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (() => {
-            'use strict'
-
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            const forms = document.querySelectorAll('.validated-form')
-
-            // Loop over them and prevent submission
-            Array.from(forms).forEach(form => {
-                form.addEventListener('submit', event => {
-                    if (!form.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
-                    }
-
-                    form.classList.add('was-validated')
-                }, false)
-            })
-        })()
-    </script>
+			<div class="mb-3">
+				<label class="form-label" for="description">Description: </label>
+				<textarea class="form-control" type="text" id="description" name="campground[description]" required> </textarea>
+			</div>
+			<div class="mb-2">
+				<button class="btn btn-success" type="submit">Submit</button>
+			</div>
+		</form>
+		<a href="/campgrounds">Back</a>
+	</div>
+</div>
