--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,30 +1,48 @@
 <% layout('layouts/boilerplate') %>
-    <div class="row">
-        <div class="col-6 offset-3">
-            <div class="card mb-3">
-                <img src="<%= campground.image %>" class="card-img-top" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">
-                        <%= campground.title %>
-                    </h5>
-                    <p class="card-text">
-                        <%= campground.description %>
-                    </p>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item text-secondary">
-                        <%= campground.location %>
-                    </li>
-                    <li class="list-group-item">
-                        $<%= campground.price %> / night
-                    </li>
-                </ul>
-                <div class="card-body">
-                    <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">Edit</a>
-                    <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                        <button type="submit" class="card-link btn btn-danger">Delete</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="row">
+	<div class="col-5 offset-1 mt-3">
+		<div class="card mb-3">
+			<img src="<%= campground.image %>" class="card-img-top" alt="" />
+			<div class="card-body">
+				<h5 class="card-title"><%= campground.title %></h5>
+				<p class="card-text"><%= campground.description %></p>
+			</div>
+			<ul class="list-group list-group-flush">
+				<li class="list-group-item text-secondary"><%= campground.location %></li>
+				<li class="list-group-item">$<%= campground.price %> / night</li>
+			</ul>
+			<div class="card-body">
+				<a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-info">Edit</a>
+				<form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+					<button type="submit" class="card-link btn btn-danger">Delete</button>
+				</form>
+			</div>
+			<div class="card-footer text-secondary">2 days ago</div>
+		</div>
+	</div>
+	<div class="col-5 mt-3">
+		<% for (let review of campground.reviews) { %>
+		<div class="card mb-3">
+			<div class="card-body">
+				<h5 class="card-title">Rating: <%= review.rating %></h5>
+				<p class="card-text">Review: <%= review.body %></p>
+				<form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="post"><button class="btn btn-danger" type="submit">Delete</button></form>
+			</div>
+		</div>
+		<% } %>
+		<h3>Leave a review</h3>
+		<form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 validated-form" novalidate>
+			<div class="mb-3">
+				<label class="form-label" for="rating">Rating</label>
+				<input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5" required />
+				<div class="invalid-feedback">Review can't be empty.</div>
+			</div>
+			<div class="mb-3">
+				<label class="form-label" for="review-body">Review</label>
+				<textarea class="form-control" name="review[body]" id="review-body" cols="30" rows="3" required></textarea>
+				<div class="invalid-feedback">Review can't be empty.</div>
+			</div>
+			<button class="btn btn-success">Submit</button>
+		</form>
+	</div>
+</div>
